Test scripts in package.json updated

--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
     "prepublish": "npm run build",
     "lint": "tslint modules/**/*.ts",
     "pretest": "cd tests && npm install",
-    "test:unit": "cd tests && TEST_BROWSER_DRIVER=phantomjs meteor test --port 3005 --once --driver-package=meteortesting:mocha",
-    "test:app": "cd tests && TEST_BROWSER_DRIVER=phantomjs meteor test --port 3005 --full-app --once --driver-package=meteortesting:mocha",
-    "test": "npm run test:unit && npm run test:app",
+    "test:compilers": "cd tests && cd angular2-compilers-tests && meteor npm install && METEOR_PACKAGES_DIR=../../atmosphere-packages TEST_BROWSER_DRIVER=phantomjs meteor test --allow-incompatible-update --port 3005 --once --driver-package=sanjo:jasmine",
+    "test": "npm run test:compilers",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "rollup:browser": "rollup -i ./dist/index.js -o ./dist/bundles/index.umd.js -n ng.meteor -c rollup.config.js",
     "rollup:main": "rollup -i ./dist/main.js -o ./dist/bundles/main.umd.js -n ng.meteor -c rollup.config.js",
