--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prepublish": "npm run build",
     "lint": "tslint modules/**/*.ts",
     "pretest": "cd tests && npm install",
-    "test:compilers": "cd tests && cd angular2-compilers-tests && meteor npm install && METEOR_PACKAGES_DIR=../../atmosphere-packages TEST_BROWSER_DRIVER=phantomjs meteor test --allow-incompatible-update --port 3005 --once --driver-package=sanjo:jasmine",
+    "test:compilers": "cd tests && cd angular2-compilers-tests && npm install && npm test",
     "test": "npm run test:compilers",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "rollup:browser": "rollup -i ./dist/index.js -o ./dist/bundles/index.umd.js -n ng.meteor -c rollup.config.js",
