--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["config:js-lib", ":meteor"]
+  "extends": ["config:js-lib", ":meteor"],
+  "ignorePaths": ["examples/angularcli-meteor/api"]
 }
