chore(dependencies): Reverting renovate ignore
Reverting renovate ignore path thanks to @rarkins adding it to renovate!

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,3 @@
 {
-  "extends": ["config:js-lib", ":meteor"],
-  "ignorePaths": ["examples/angularcli-meteor/api"]
+  "extends": ["config:js-lib", ":meteor"]
 }
