File/code clean

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,9 @@ sudo: required
 language: node_js
 node_js:
   - "6"
-services:
-  - mongodb
 before_install:
   - curl https://install.meteor.com | /bin/sh
-  - rm -rf node_modules
 install:
   - git clean -fXd
-  - meteor npm install -g phantomjs-prebuilt rollup@^0.37.0 tslint@^4.0.0 typescript@^2.0.10
-  - cd tests/angular-compilers-tests/
-  - meteor npm install
-  - meteor npm rebuild
 script:
-  - npm run test
+  - ./run_tests.sh
