Add tests for angularcli-meteor

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ before_install:
   - curl https://install.meteor.com | /bin/sh
 install:
   - git clean -fXd
+  - npm install -g concurrently
 script:
   - ./run_tests.sh
