--- a/examples/MeteorCLI/bare/package.json
+++ b/examples/MeteorCLI/bare/package.json
@@ -4,15 +4,15 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "@angular/animations": "^4.4.5",
-    "@angular/common": "^4.4.5",
-    "@angular/compiler": "^4.4.5",
-    "@angular/core": "^4.4.5",
-    "@angular/forms": "^4.4.5",
-    "@angular/http": "^4.4.5",
-    "@angular/platform-browser": "^4.4.5",
-    "@angular/platform-browser-dynamic": "^4.4.5",
-    "@angular/router": "^4.4.5",
+    "@angular/animations": "^4.4.6",
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/http": "^4.4.6",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/router": "^4.4.6",
     "babel-runtime": "^6.20.0",
     "meteor-node-stubs": "~0.3.0",
     "meteor-rxjs": "^0.4.8",
@@ -22,6 +22,6 @@
   "devDependencies": {
     "@angular/compiler-cli": "^4.4.6",
     "@types/meteor": "1.4.11",
-    "typescript": "^2.5.3"
+    "typescript": ">=2.4.2 <2.5"
   }
 }
