[angular-compilers] merge compilers into all-in-one compiler use caching remove barbatus:typescript performance enhancements

--- a/examples/MeteorCLI/all-in-one/tsconfig.json
+++ b/examples/MeteorCLI/all-in-one/tsconfig.json
@@ -10,7 +10,7 @@
       "dom",
       "es2015"
     ],
-    "module": "es2015",
+    "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
     "target": "es2015",
