--- a/examples/MeteorCLI/universal/tsconfig.json
+++ b/examples/MeteorCLI/universal/tsconfig.json
@@ -10,7 +10,7 @@
       "dom",
       "es2015"
     ],
-    "module": "es2015",
+    "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
     "target": "es2015",
