always verify cache in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - curl https://install.meteor.com | /bin/sh
 install:
   - git clean -fXd
+  - npm cache verify
   - npm install -g concurrently
 script:
   - ./run_tests.sh
