--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 sudo: required
 language: node_js
 node_js:
-  - "6"
+  - "8"
 before_install:
+  - if [[ `npm -v` != 5* ]]; then npm i -g npm@5; fi
   - curl https://install.meteor.com | /bin/sh
 install:
   - git clean -fXd
