--- a/examples/MeteorCLI/lazy-loading/package.json
+++ b/examples/MeteorCLI/lazy-loading/package.json
@@ -4,17 +4,19 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "@angular/common": "^4.4.5",
-    "@angular/compiler": "^4.4.5",
-    "@angular/core": "^4.4.5",
-    "@angular/forms": "^4.4.6",
-    "@angular/platform-browser": "^4.4.5",
-    "@angular/platform-browser-dynamic": "^4.4.5",
-    "@angular/router": "^4.4.5",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "babel-runtime": "^6.20.0",
     "meteor-node-stubs": "~0.3.0",
     "meteor-rxjs": "^0.4.8",
-    "rxjs": "^5.4.2",
+    "rxjs": "^5.5.0",
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
