--- a/examples/MeteorCLI/universal/package.json
+++ b/examples/MeteorCLI/universal/package.json
@@ -5,16 +5,16 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "@angular/animations": "^5.0.0-rc.5",
-    "@angular/common": "^5.0.0-rc.5",
-    "@angular/compiler": "^5.0.0-rc.5",
-    "@angular/core": "^5.0.0-rc.5",
-    "@angular/forms": "^5.0.0-rc.5",
-    "@angular/http": "^5.0.0-rc.5",
-    "@angular/platform-browser": "^5.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^5.0.0-rc.5",
-    "@angular/platform-server": "^5.0.0-rc.5",
-    "@angular/router": "^5.0.0-rc.5",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "babel-runtime": "^6.20.0",
     "meteor-node-stubs": "~0.3.0",
     "meteor-rxjs": "^0.4.8",
@@ -22,8 +22,6 @@
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "5.0.0-rc.9",
-    "@types/meteor": "1.4.12",
-    "typescript": "2.5.3"
+    "@types/meteor": "1.4.12"
   }
 }
