New version of compilers are published

--- a/examples/MeteorCLI/lazy-loading/package.json
+++ b/examples/MeteorCLI/lazy-loading/package.json
@@ -20,8 +20,6 @@
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "4.4.6",
-    "@types/meteor": "1.4.12",
-    "typescript": "2.5.3"
+    "@types/meteor": "1.4.12"
   }
 }
