[angular-compilers] New release Added simple tutorial Re-added rollup option Windows path problem fixed Global SCSS ability (like old version)

--- a/examples/MeteorCLI/all-in-one/package.json
+++ b/examples/MeteorCLI/all-in-one/package.json
@@ -22,6 +22,7 @@
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@types/meteor": "1.4.12"
+    "@types/meteor": "1.4.12",
+    "@types/node": "^8.0.53"
   }
 }
