--- a/examples/MeteorCLI/universal/package.json
+++ b/examples/MeteorCLI/universal/package.json
@@ -22,6 +22,9 @@
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@types/meteor": "1.4.12"
+    "@angular/compiler-cli": "^5.0.3",
+    "@types/meteor": "1.4.12",
+    "@types/node": "^8.0.53",
+    "typescript": "^2.6.1"
   }
 }
