--- a/examples/angularcli-meteor/package.json
+++ b/examples/angularcli-meteor/package.json
@@ -17,72 +17,70 @@
     "meteor-client:bundle": "meteor-client bundle -s api"
   },
   "private": true,
-  "renovate": {
-    "branchPrefix": "renovate/angularcli-"
-  },
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "angular2-moment": "^1.7.0",
     "babel-runtime": "^6.26.0",
     "core-js": "^2.4.1",
-    "meteor-node-stubs": "^0.3.0",
+    "meteor-node-stubs": "^0.3.2",
     "meteor-rxjs": "^0.4.8",
-    "moment": "^2.19.1",
-    "rxjs": "^5.4.2",
+    "moment": "^2.19.3",
+    "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.9",
-    "@angular/compiler-cli": "4.4.6",
-    "@angular/language-service": "4.4.6",
-    "@types/jasmine": "2.8.2",
-    "@types/jasminewd2": "2.0.3",
-    "@types/meteor": "1.4.12",
-    "@types/node": "8.0.57",
-    "autoprefixer": "7.1.6",
-    "circular-dependency-plugin": "4.3.0",
-    "codelyzer": "4.0.1",
-    "copy-webpack-plugin": "4.2.3",
-    "css-loader": "0.28.7",
-    "cssnano": "3.10.0",
-    "exports-loader": "0.6.4",
-    "file-loader": "1.1.5",
-    "html-webpack-plugin": "2.30.1",
-    "istanbul-instrumenter-loader": "3.0.0",
-    "jasmine-core": "2.8.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "1.7.1",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "1.3.0",
-    "karma-jasmine": "1.1.1",
-    "karma-jasmine-html-reporter": "0.2.2",
-    "less-loader": "4.0.5",
-    "meteor-client-bundler": "0.3.0",
-    "postcss-loader": "2.0.9",
-    "postcss-url": "7.3.0",
-    "protractor": "5.2.1",
-    "raw-loader": "0.5.1",
-    "sass-loader": "6.0.6",
-    "source-map-loader": "0.2.3",
-    "style-loader": "0.19.0",
-    "stylus-loader": "3.0.1",
+    "@angular/cli": "1.6.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/meteor": "^1.4.12",
+    "@types/node": "~6.0.60",
+    "autoprefixer": "^6.5.3",
+    "circular-dependency-plugin": "^4.2.1",
+    "codelyzer": "^4.0.1",
+    "copy-webpack-plugin": "^4.1.1",
+    "css-loader": "^0.28.1",
+    "cssnano": "^3.10.0",
+    "exports-loader": "^0.6.3",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.29.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "less-loader": "^4.0.5",
+    "meteor-client-bundler": "^0.3.0",
+    "postcss-loader": "^2.0.8",
+    "postcss-url": "^7.1.2",
+    "protractor": "~5.1.2",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.3",
+    "source-map-loader": "^0.2.0",
+    "style-loader": "^0.13.1",
+    "stylus-loader": "^3.0.1",
     "tmp": "0.0.33",
-    "ts-node": "3.3.0",
-    "tslint": "5.8.0",
-    "typescript": "2.5.3",
-    "typescript-extends": "1.0.1",
-    "url-loader": "0.6.2",
-    "webpack": "3.10.0",
-    "webpack-concat-plugin": "1.4.2",
-    "webpack-dev-server": "2.9.7"
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.4.2",
+    "typescript-extends": "^1.0.1",
+    "uglifyjs-webpack-plugin": "~1.1.2",
+    "url-loader": "^0.6.2",
+    "webpack": "~3.10.0",
+    "webpack-concat-plugin": "^1.4.2",
+    "webpack-dev-server": "~2.9.3"
   }
 }
