--- a/examples/MeteorCLI/lazy-loading/package.json
+++ b/examples/MeteorCLI/lazy-loading/package.json
@@ -1,27 +1,34 @@
 {
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package=ardatan:mocha",
+    "test:ci": "TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package=ardatan:mocha --once"
   },
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "babel-runtime": "^6.20.0",
-    "meteor-node-stubs": "~0.3.0",
+    "@angular/common": "^5.0.3",
+    "@angular/compiler": "^5.0.3",
+    "@angular/core": "^5.0.3",
+    "@angular/forms": "^5.0.3",
+    "@angular/platform-browser": "^5.0.3",
+    "@angular/platform-browser-dynamic": "^5.0.3",
+    "@angular/router": "^5.0.3",
+    "@babel/runtime": "^7.0.0-beta.42",
+    "core-js": "^2.5.3",
+    "meteor-node-stubs": "~0.3.3",
     "meteor-rxjs": "^0.4.8",
     "rxjs": "^5.5.0",
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "5.1.0",
-    "@types/meteor": "1.4.12",
-    "typescript": "2.6.2"
+    "@angular/compiler-cli": "^5.1.0",
+    "@types/chai": "^4.0.8",
+    "@types/meteor": "^1.4.12",
+    "@types/mocha": "^2.2.44",
+    "@types/sinon": "^4.1.0",
+    "chai": "^4.1.2",
+    "phantomjs-prebuilt": "^2.1.16",
+    "sinon": "^4.1.3",
+    "typescript": "^2.6.2"
   }
 }
