Ignore rollup dependencies
`angular-compilers` is not compatible with new version of rollup packages

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,11 @@
 {
   "extends": ["config:js-lib", ":meteor"],
-  "rebaseStalePrs": true
+  "rebaseStalePrs": true,
+  "ignoreDeps": ["rollup"],
+  "packageRules": [
+    {
+      "packagePatterns": ["rollup$"],
+      "groupName": "rollup"
+    }
+  ]
 }
