--- a/examples/MeteorCLI/bare/package.json
+++ b/examples/MeteorCLI/bare/package.json
@@ -2,33 +2,34 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
+    "start:prod": "AOT=1 ROLLUP=1 meteor --production",
     "test": "TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package=ardatan:mocha",
     "test:ci": "TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package=ardatan:mocha --once"
   },
   "dependencies": {
-    "@angular/common": "^5.0.3",
-    "@angular/compiler": "^5.0.3",
-    "@angular/core": "^5.0.3",
-    "@angular/forms": "^5.0.3",
-    "@angular/platform-browser": "^5.0.3",
-    "@angular/platform-browser-dynamic": "^5.0.3",
-    "@angular/router": "^5.0.3",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/router": "^5.2.9",
     "@babel/runtime": "^7.0.0-beta.42",
     "core-js": "^2.5.3",
     "meteor-node-stubs": "~0.3.3",
-    "meteor-rxjs": "^0.4.8",
-    "rxjs": "^5.5.0",
-    "zone.js": "^0.8.16"
+    "meteor-rxjs": "^0.4.10",
+    "rxjs": "^5.5.7",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^5.1.0",
-    "@types/chai": "^4.0.8",
-    "@types/meteor": "^1.4.12",
-    "@types/mocha": "^2.2.44",
-    "@types/sinon": "^4.1.0",
+    "@angular/compiler-cli": "^5.2.9",
+    "@types/chai": "^4.1.2",
+    "@types/meteor": "^1.4.13",
+    "@types/mocha": "^2.2.48",
+    "@types/sinon": "^4.3.0",
     "chai": "^4.1.2",
     "phantomjs-prebuilt": "^2.1.16",
-    "sinon": "^4.1.3",
-    "typescript": "^2.6.2"
+    "sinon": "^4.4.6",
+    "typescript": "^2.7.2"
   }
 }
