--- a/examples/angularjs/package.json
+++ b/examples/angularjs/package.json
@@ -2,7 +2,9 @@
   "name": "angularjs-meteor",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package=ardatan:mocha",
+    "test:ci": "TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package=ardatan:mocha --once"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
