--- a/examples/angularjs/package.json
+++ b/examples/angularjs/package.json
@@ -10,5 +10,8 @@
     "@babel/runtime": "^7.0.0-beta.36",
     "angular": "^1.6.9",
     "meteor-node-stubs": "^0.3.2"
+  },
+  "devDependencies": {
+    "phantomjs-prebuilt": "^2.1.16"
   }
 }
