--- a/examples/MeteorCLI/all-in-one/package.json
+++ b/examples/MeteorCLI/all-in-one/package.json
@@ -6,27 +6,27 @@
     "test:ci": "TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package=ardatan:mocha --once"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/platform-server": "^5.2.9",
-    "@angular/router": "^5.2.9",
-    "@babel/runtime": "^7.0.0-beta.42",
-    "core-js": "^2.5.3",
-    "meteor-node-stubs": "~0.3.3",
-    "meteor-rxjs": "^0.4.10",
-    "rxjs": "^5.5.7",
-    "zone.js": "^0.8.20"
+    "@angular/animations": "^5.2.11",
+    "@angular/common": "^5.2.11",
+    "@angular/compiler": "^5.2.11",
+    "@angular/core": "^5.2.11",
+    "@angular/forms": "^5.2.11",
+    "@angular/http": "^5.2.11",
+    "@angular/platform-browser": "^5.2.11",
+    "@angular/platform-browser-dynamic": "^5.2.11",
+    "@angular/platform-server": "^5.2.11",
+    "@angular/router": "^5.2.11",
+    "@babel/runtime": "^7.0.0-beta.51",
+    "core-js": "^2.5.7",
+    "meteor-node-stubs": "~0.4.1",
+    "meteor-rxjs": "0.4.11",
+    "rxjs": "^5.5.11",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^5.2.9",
+    "@angular/compiler-cli": "^5.2.11",
     "@types/chai": "^4.0.8",
-    "@types/meteor": "^1.4.13",
+    "@types/meteor": "^1.4.16",
     "@types/mocha": "^2.2.44",
     "@types/sinon": "^4.1.0",
     "chai": "^4.1.2",
