Added Meteor, Node.js and missing package types to TypeScript compiler options. Fixes error: Cannot find name 'require'. Fixes error: Cannot find name 'Assets'.

--- a/examples/MeteorCLI/bare/tsconfig.json
+++ b/examples/MeteorCLI/bare/tsconfig.json
@@ -19,6 +19,7 @@
     "noImplicitAny": false,
     "types": [
       "@types/meteor",
+      "@types/node",
       "@types/mocha",
       "@types/chai",
       "@types/sinon"
