--- a/examples/MeteorCLI/all-in-one/tsconfig.json
+++ b/examples/MeteorCLI/all-in-one/tsconfig.json
@@ -16,16 +16,19 @@
     "target": "es2015",
     "skipLibCheck": true,
     "stripInternal": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "types": [
+      "@types/meteor",
+      "@types/node",
+      "@types/mocha",
+      "@types/chai",
+      "@types/sinon"
+    ]
   },
   "include": [
     "imports/**/*.ts",
     "client/**/*.ts",
     "server/**/*.ts"
-  ],
-  "types": [
-    "@types/meteor",
-    "@types/node"
   ],
   "exclude": [
     "node_modules"
