--- a/examples/MeteorCLI/lazy-loading/tsconfig.json
+++ b/examples/MeteorCLI/lazy-loading/tsconfig.json
@@ -16,7 +16,14 @@
     "target": "es2015",
     "skipLibCheck": true,
     "stripInternal": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "types": [
+      "@types/meteor",
+      "@types/node",
+      "@types/mocha",
+      "@types/chai",
+      "@types/sinon"
+    ]
   },
   "include": [
     "imports/**/*.ts",
@@ -25,10 +32,6 @@
   ],
   "exclude": [
     "node_modules"
-  ],
-  "types": [
-    "@types/meteor",
-    "@types/node"
   ],
   "compileOnSave": false,
   "atom": {
