--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,6 @@ before_install:
   - sudo apt-get -y install docker-ce
   - docker --version
   - 'sudo docker pull ${distribution}:${version}'
-  - 'sudo docker build --no-cache --rm --file=Dockerfile --tag=angular-meteor:latest'
-install:
-  - git clean -fXd
-  - npm cache verify
-  - npm install -g concurrently
+  - 'sudo docker build --no-cache --rm --file=Dockerfile'
 script:
-  - docker run -v ${TRAVIS_BUILD_DIR}:/angular-meteor/ ${distribution}:${version} /angular-meteor/run_tests.sh
+  - 'sudo docker run -v ${TRAVIS_BUILD_DIR}:/angular-meteor/ ${distribution}:${version} /angular-meteor/run_tests.sh'
