Update ownership of source code directory.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,7 @@ before_install:
   - 'sudo docker build --no-cache --rm --file=Dockerfile --tag=angular-meteor:latest .'
 install:
   - "sudo docker run -v ${TRAVIS_BUILD_DIR}:/angular-meteor/ --detach --name=angular-meteor-container --user docker --workdir /angular-meteor angular-meteor:latest bash -c 'source $HOME/.nvm/nvm.sh; git clean -fXd; npm cache verify; npm install -g concurrently'"
+before_script:
+  - "sudo docker exec --user root --workdir /angular-meteor angular-meteor-container bash -c 'chown -R docker /angular-meteor'"
 script:
   - "sudo docker exec --user docker --workdir /angular-meteor angular-meteor-container bash -c 'source $HOME/.nvm/nvm.sh; /angular-meteor/run_tests.sh'"
