--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ before_script:
 script:
   - "sudo docker stats --no-stream"
   - "sudo free -m"
-  - "sudo docker exec --tty --user docker --workdir /angular-meteor-sourcecode angular-meteor-container bash -c 'source $HOME/.nvm/nvm.sh; /angular-meteor-sourcecode/run_tests.sh'"
+  - "sudo docker exec --tty --user docker --workdir /angular-meteor-sourcecode angular-meteor-container bash -c 'source $HOME/.nvm/nvm.sh; export QT_QPA_PLATFORM=offscreen; /angular-meteor-sourcecode/run_tests.sh'"
