--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,11 @@ before_install:
   - 'sudo docker pull ${distribution}:${version}'
   - 'sudo docker build --no-cache --rm --file=Dockerfile --tag=angular-meteor:latest .'
 install:
-  - "sudo docker run --memory 2g --volume ${TRAVIS_BUILD_DIR}:/angular-meteor-sourcecode/ --detach --name=angular-meteor-container --user docker --workdir /angular-meteor-sourcecode angular-meteor:latest bash -c 'source $HOME/.nvm/nvm.sh; git clean -fXd; npm cache verify; npm install -g concurrently'"
+  - "sudo docker run -td --memory 2g --volume ${TRAVIS_BUILD_DIR}:/angular-meteor-sourcecode/ --name=angular-meteor-container angular-meteor:latest"
+  - "sudo docker exec --user docker --workdir /angular-meteor-sourcecode angular-meteor-container bash -c 'source $HOME/.nvm/nvm.sh; git clean -fXd; npm cache verify; npm install -g concurrently'"
 before_script:
   - "sudo docker exec --user root --workdir /angular-meteor-sourcecode angular-meteor-container bash -c 'chown -R docker /angular-meteor-sourcecode'"
 script:
   - "sudo docker stats --no-stream"
   - "sudo free -m"
-  - "sudo docker exec --tty --user docker --workdir /angular-meteor-sourcecode angular-meteor-container bash -c 'source $HOME/.nvm/nvm.sh; export QT_QPA_PLATFORM=offscreen; /angular-meteor-sourcecode/run_tests.sh'"
+  - "sudo docker exec --user docker --workdir /angular-meteor-sourcecode angular-meteor-container bash -c 'source $HOME/.nvm/nvm.sh; export QT_QPA_PLATFORM=offscreen; /angular-meteor-sourcecode/run_tests.sh'"
