Adjust memory settings for TravisCI usage. Total of 2304 megabytes for docker container, of which 2048 megabytes are used for Node.js, leaving 256 megabytes available.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - 'sudo docker pull ${distribution}:${version}'
   - 'sudo docker build --no-cache --rm --file=Dockerfile --tag=angular-meteor:latest .'
 install:
-  - "sudo docker run -td --memory 2g --volume ${TRAVIS_BUILD_DIR}:/angular-meteor-sourcecode/ --name=angular-meteor-container angular-meteor:latest"
+  - "sudo docker run -td --memory 2304m --volume ${TRAVIS_BUILD_DIR}:/angular-meteor-sourcecode/ --name=angular-meteor-container angular-meteor:latest"
   - "sudo docker exec --user docker --workdir /angular-meteor-sourcecode angular-meteor-container bash -c 'source $HOME/.nvm/nvm.sh; git clean -fXd; npm cache verify; npm install -g concurrently'"
 before_script:
   - "sudo docker exec --user root --workdir /angular-meteor-sourcecode angular-meteor-container bash -c 'chown -R docker /angular-meteor-sourcecode'"
