--- a/examples/MeteorCLI/lazy-loading/package.json
+++ b/examples/MeteorCLI/lazy-loading/package.json
@@ -6,13 +6,13 @@
     "test:ci": "TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package=ardatan:mocha --once"
   },
   "dependencies": {
-    "@angular/common": "^6.0.8",
-    "@angular/compiler": "^6.0.8",
-    "@angular/core": "^6.0.8",
-    "@angular/forms": "^6.0.8",
-    "@angular/platform-browser": "^6.0.8",
-    "@angular/platform-browser-dynamic": "^6.0.8",
-    "@angular/router": "^6.0.8",
+    "@angular/common": "^6.0.9",
+    "@angular/compiler": "^6.0.9",
+    "@angular/core": "^6.0.9",
+    "@angular/forms": "^6.0.9",
+    "@angular/platform-browser": "^6.0.9",
+    "@angular/platform-browser-dynamic": "^6.0.9",
+    "@angular/router": "^6.0.9",
     "@babel/runtime": "^7.0.0-beta.53",
     "core-js": "^2.5.7",
     "meteor-node-stubs": "^0.4.1",
@@ -21,15 +21,15 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.9",
     "@types/chai": "^4.1.4",
     "@types/meteor": "^1.4.16",
-    "@types/mocha": "^2.2.48",
-    "@types/sinon": "^4.3.0",
+    "@types/mocha": "^5.2.4",
+    "@types/sinon": "^5.0.1",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "phantomjs-prebuilt": "^2.1.16",
-    "sinon": "^4.4.9",
-    "typescript": "^2.8.4"
+    "sinon": "^6.1.3",
+    "typescript": "2.9.x"
   }
 }
