--- a/examples/MeteorCLI/lazy-loading/package.json
+++ b/examples/MeteorCLI/lazy-loading/package.json
@@ -13,7 +13,7 @@
     "@angular/platform-browser": "^6.0.9",
     "@angular/platform-browser-dynamic": "^6.0.9",
     "@angular/router": "^6.0.9",
-    "@babel/runtime": "^7.0.0-beta.54",
+    "@babel/runtime": "^7.1.5",
     "core-js": "^2.5.7",
     "meteor-node-stubs": "^0.4.1",
     "meteor-rxjs": "^0.4.14",
