--- a/examples/MeteorCLI/bare/package.json
+++ b/examples/MeteorCLI/bare/package.json
@@ -7,22 +7,22 @@
     "test:ci": "TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package=ardatan:mocha --once"
   },
   "dependencies": {
-    "@angular/common": "^6.0.9",
-    "@angular/compiler": "^6.0.9",
-    "@angular/core": "^6.0.9",
-    "@angular/forms": "^6.0.9",
-    "@angular/platform-browser": "^6.0.9",
-    "@angular/platform-browser-dynamic": "^6.0.9",
-    "@angular/router": "^6.0.9",
+    "@angular/common": "^7.1.0",
+    "@angular/compiler": "^7.1.0",
+    "@angular/core": "^7.1.0",
+    "@angular/forms": "^7.1.0",
+    "@angular/platform-browser": "^7.1.0",
+    "@angular/platform-browser-dynamic": "^7.1.0",
+    "@angular/router": "^7.1.0",
     "@babel/runtime": "^7.1.5",
     "core-js": "^2.5.7",
     "meteor-node-stubs": "^0.4.1",
     "meteor-rxjs": "^0.4.14",
-    "rxjs": "^6.2.2",
+    "rxjs": "^6.3.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.9",
+    "@angular/compiler-cli": "^7.1.0",
     "@types/chai": "^4.1.4",
     "@types/meteor": "^1.4.16",
     "@types/mocha": "^5.2.5",
@@ -31,6 +31,6 @@
     "mocha": "^5.2.0",
     "phantomjs-prebuilt": "^2.1.16",
     "sinon": "^6.1.3",
-    "typescript": "2.9.x"
+    "typescript": "~3.1.1"
   }
 }
