--- a/examples/MeteorCLI/bare/package.json
+++ b/examples/MeteorCLI/bare/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "start": "meteor run",
     "start:prod": "AOT=1 ROLLUP=1 meteor --production",
-    "test": "TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package=ardatan:mocha",
-    "test:ci": "TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package=ardatan:mocha --once"
+    "test": "TEST_BROWSER_DRIVER=nightmare meteor test --driver-package=ardatan:mocha --raw-logs",
+    "test:ci": "TEST_BROWSER_DRIVER=nightmare meteor test --driver-package=ardatan:mocha --once --raw-logs"
   },
   "dependencies": {
     "@angular/common": "^7.1.0",
@@ -29,7 +29,7 @@
     "@types/sinon": "^5.0.1",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
-    "phantomjs-prebuilt": "^2.1.16",
+    "nightmare": "^3.0.1",
     "sinon": "^6.1.3",
     "typescript": "~3.1.1"
   }
