--- a/examples/MeteorCLI/lazy-loading/package.json
+++ b/examples/MeteorCLI/lazy-loading/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "test": "TEST_BROWSER_DRIVER=nightmare meteor test --driver-package=ardatan:mocha --raw-logs",
-    "test:ci": "TEST_BROWSER_DRIVER=nightmare meteor test --driver-package=ardatan:mocha --once --raw-logs"
+    "test": "TEST_BROWSER_DRIVER=puppeteer meteor test --driver-package=ardatan:mocha --raw-logs",
+    "test:ci": "TEST_BROWSER_DRIVER=puppeteer meteor test --driver-package=ardatan:mocha --once --raw-logs"
   },
   "dependencies": {
     "@angular/common": "^7.1.0",
@@ -28,7 +28,7 @@
     "@types/sinon": "^5.0.1",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
-    "nightmare": "^3.0.1",
+    "puppeteer": "^1.10.0",
     "sinon": "^6.1.3",
     "typescript": "~3.1.1"
   }
