--- a/examples/angularjs/package.json
+++ b/examples/angularjs/package.json
@@ -7,7 +7,7 @@
     "test:ci": "TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package=ardatan:mocha --once"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.36",
+    "@babel/runtime": "^7.1.5",
     "angular": "^1.6.9",
     "meteor-node-stubs": "^0.3.2"
   },
