--- a/examples/MeteorCLI/bare/package.json
+++ b/examples/MeteorCLI/bare/package.json
@@ -3,34 +3,36 @@
   "scripts": {
     "start": "meteor run",
     "start:prod": "AOT=1 meteor --production",
+    "build:prod": "AOT=1 meteor build .",
     "test": "TEST_BROWSER_DRIVER=puppeteer meteor test --driver-package=ardatan:mocha --raw-logs",
     "test:ci": "TEST_BROWSER_DRIVER=puppeteer meteor test --driver-package=ardatan:mocha --once --raw-logs"
   },
   "dependencies": {
-    "@angular/common": "^7.1.0",
-    "@angular/compiler": "^7.1.0",
-    "@angular/core": "^7.1.0",
-    "@angular/forms": "^7.1.0",
-    "@angular/platform-browser": "^7.1.0",
-    "@angular/platform-browser-dynamic": "^7.1.0",
-    "@angular/router": "^7.1.0",
-    "@babel/runtime": "^7.13.7",
+    "@angular/common": "11.2.2",
+    "@angular/core": "11.2.2",
+    "@angular/forms": "11.2.2",
+    "@angular/platform-browser": "11.2.2",
+    "@angular/platform-browser-dynamic": "11.2.2",
+    "@angular/router": "11.2.2",
+    "@babel/runtime": "7.13.7",
     "core-js": "^3.9.0",
-    "meteor-node-stubs": "^0.4.1",
+    "meteor-node-stubs": "^1.0.1",
     "meteor-rxjs": "^0.4.14",
-    "rxjs": "^6.3.0",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.6.3",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.1.0",
-    "@types/chai": "^4.1.7",
-    "@types/meteor": "^1.4.23",
-    "@types/mocha": "^5.2.5",
-    "@types/sinon": "^5.0.7",
-    "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "puppeteer": "^1.10.0",
-    "sinon": "^7.1.1",
-    "typescript": "~3.1.1"
+    "@angular/compiler": "11.2.2",
+    "@angular/compiler-cli": "11.2.2",
+    "@types/chai": "^4.2.15",
+    "@types/meteor": "1.4.67",
+    "@types/mocha": "^8.2.1",
+    "@types/node": "^14.14.22",
+    "@types/sinon": "^9.0.10",
+    "chai": "^4.3.0",
+    "mocha": "8.3.0",
+    "puppeteer": "^7.1.0",
+    "sinon": "^9.2.4",
+    "typescript": "4.2.2"
   }
 }
